# agent-secret-bridge

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: INSTALL.md  RELEASE.md  ROADMAP.md
examples/: asb.yaml  e2e-asb.yaml  e2e_canary.rs  ssh-asb.yaml  vps-asb.yaml
packaging/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
packaging/systemd/: agent-secret-bridge.service  asb.env.example
src/: audit.rs  config.rs  http.rs  lib.rs  main.rs  mcp.rs  policy.rs  rate_limit.rs  redact.rs  ssh.rs  vault.rs
